--- a/app/templates/app.html
+++ b/app/templates/app.html
@@ -12,6 +12,8 @@
                         <option value="2021">2021</option>
                         <option value="2020">2020</option>
                         <option value="2019">2019</option>
+                        <option value="2018">2018</option>
+                        <option value="2017">2017</option>
                     </select>
                 </div>
 
@@ -35,6 +37,8 @@
                         <option value="2021">2021</option>
                         <option value="2020">2020</option>
                         <option value="2019">2019</option>
+                        <option value="2018">2018</option>
+                        <option value="2017">2017</option>
                     </select>
                 </div>
 
